<resources>
    <string name="app_name">LearnRetrofitKotlin</string>
    <string name="name">Name </string>
    <string name="surname">Age </string>
    <string name="phone">Position </string>
    <string name="title_add">Add data</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="not_all_fields">Fill in all the fields.</string>
    <string name="toast_add">Data added</string>
    <string name="edit_text_name">To do</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_edit">Edit data</string>
    <string name="message_delete">Do you want to delete this contact?</string>
    <string name="button_delete">Delete</string>
    <string name="title_delete">Delete data</string>
</resources>
